# voice-bench

./: .gitignore  README.md  pyproject.toml
docs/: 2026-05-19-tool-calling-takeaways.md
docs/stories/: 2026-05-18-openai-realtime-adapter.md  2026-05-18-text-model-multi-tool-benchmark.md  2026-05-18-voice-bench-foundation.md  2026-05-19-dashboard-v2.md  2026-05-19-diverse-tools-voice-bench.md  2026-05-19-gemini-live-dynamic-tool-pool-swap.md  2026-05-19-meta-category-routing-benchmark.md  2026-05-19-openai-realtime-dynamic-tool-pool-swap.md  2026-05-19-two-layer-pipeline-benchmark.md
prompts/: manifest.json  manifest_diverse.json  manifest_routing.json  manifest_swap.json  manifest_v2.json
prompts/system/: gemini-live-swap.md  gemini-live.md  gemini-text.md  openai-realtime-swap.md  openai-realtime-v2.md  openai-realtime.md
results/: dashboard.css  dashboard.html  dashboard.js
scripts/: build_dashboard.py  build_voice_analysis.py  gen_manifest_v2.py  gen_routing_manifest.py  probe_gemini_session_swap.py  probe_openai_realtime.py  probe_session_update.py  validate_manifest_diverse.py  verify_model_ids.py
src/voice_bench/: __init__.py  audio.py  cli.py  models.py  runner.py  scoring.py  scoring_swap.py  swap_runner.py  tools.py  toolsets.py
src/voice_bench/adapters/: __init__.py  _gemini_common.py  asr_plus_text.py  base.py  claude_text.py  gemini_live.py  gemini_live_swap.py  gemini_text.py  gpt_text.py  openai_realtime.py  openai_realtime_swap.py  registry.py
tests/: test_audio.py  test_scoring.py  test_swap_adapter_contract.py
