[project]
name = "voice-bench"
version = "0.1.0"
description = "Automated benchmarking harness for voice AI agents on tool-calling accuracy and latency"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "soundfile>=0.12",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.scripts]
voice-bench = "voice_bench.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_bench"]
